[gd_scene load_steps=3 format=2]

[ext_resource path="res://demo_scene.gd" type="Script" id=1]
[ext_resource path="res://addons/appodeal/appodeal_signals.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0
script = ExtResource( 1 )
test_mode_node_path = NodePath("TestModeCheckButton")
consent_node_path = NodePath("ConsentCheckButton")
autocache_node_path = NodePath("AutocacheCheckButton")
diable_network_node_path = NodePath("DisableNetworkCheckButton")
log_level_node_path = NodePath("LogLevelDropdown")
init_btn_node_path = NodePath("InitButton")
init_state_node_path = NodePath("InitState")

[node name="AppodealSignals" type="Node" parent="."]
script = ExtResource( 2 )

[node name="TestModeCheckButton" type="CheckButton" parent="."]
anchor_left = 0.023
anchor_top = 0.013
anchor_right = 0.301
anchor_bottom = 0.055
margin_left = 0.159998
margin_top = 0.039999
margin_right = -150.08
margin_bottom = -40.6
rect_scale = Vector2( 2, 2 )
pressed = true
text = "Test Mode"

[node name="ConsentCheckButton" type="CheckButton" parent="."]
anchor_left = 0.023
anchor_top = 0.06
anchor_right = 0.301
anchor_bottom = 0.102
margin_left = 0.159998
margin_top = -0.200005
margin_right = -150.08
margin_bottom = -40.84
rect_scale = Vector2( 2, 2 )
text = "Consent"

[node name="AutocacheCheckButton" type="CheckButton" parent="."]
anchor_left = 0.699
anchor_top = 0.013
anchor_right = 0.977
anchor_bottom = 0.055
margin_left = 0.0799561
margin_top = 0.039999
margin_right = -150.16
margin_bottom = -40.6
rect_scale = Vector2( 2, 2 )
pressed = true
text = "Autocache"

[node name="DisableNetworkCheckButton" type="CheckButton" parent="."]
anchor_left = 0.699
anchor_top = 0.06
anchor_right = 0.977
anchor_bottom = 0.102
margin_left = 0.0799561
margin_top = -0.200005
margin_right = -150.16
margin_bottom = -40.84
rect_scale = Vector2( 2, 2 )
text = "DsbleNets"

[node name="LogLevelDropdown" type="OptionButton" parent="."]
anchor_left = 0.407
anchor_top = 0.065
anchor_right = 0.593
anchor_bottom = 0.096
margin_left = 0.440002
margin_top = 0.199989
margin_right = -100.44
margin_bottom = -29.32
rect_scale = Vector2( 2, 2 )
text = "LogLevel"
align = 1

[node name="InitButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.117
anchor_right = 0.403
anchor_bottom = 0.148
margin_left = 0.479996
margin_top = 0.359985
margin_right = -180.24
margin_bottom = -29.16
rect_scale = Vector2( 2, 2 )
text = "INITIALIZE"

[node name="InitState" type="ColorRect" parent="."]
anchor_left = 0.472
anchor_top = 0.117
anchor_right = 0.528
anchor_bottom = 0.148
margin_left = 0.23996
margin_top = 0.359985
margin_right = -0.23999
margin_bottom = 0.839996
rect_min_size = Vector2( 50, 50 )
color = Color( 1, 0, 0, 1 )

[node name="IsInitializedButton" type="Button" parent="."]
anchor_left = 0.597
anchor_top = 0.117
anchor_right = 0.931
anchor_bottom = 0.148
margin_left = 0.23999
margin_top = 0.359985
margin_right = -180.48
margin_bottom = -29.16
rect_scale = Vector2( 2, 2 )
text = "IS INITIALIZED"

[node name="InterLabel" type="Label" parent="."]
anchor_left = 0.361
anchor_top = 0.167
anchor_right = 0.639
anchor_bottom = 0.198
margin_left = 0.119965
margin_top = -0.640015
margin_right = -200.12
margin_bottom = -40.16
rect_scale = Vector2( 3, 3 )
text = "Interstitial"
align = 1
valign = 1

[node name="InterCacheButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.198
anchor_right = 0.329
anchor_bottom = 0.229
margin_left = 0.479996
margin_top = 19.84
margin_right = -140.32
margin_bottom = -9.68002
rect_scale = Vector2( 2, 2 )
text = "CACHE"

[node name="InterCanShowButton" type="Button" parent="."]
anchor_left = 0.37
anchor_top = 0.198
anchor_right = 0.63
anchor_bottom = 0.229
margin_left = 0.399994
margin_top = 19.84
margin_right = -140.4
margin_bottom = -9.68002
rect_scale = Vector2( 2, 2 )
text = "CAN SHOW ?"

[node name="InterShowButton" type="Button" parent="."]
anchor_left = 0.671
anchor_top = 0.198
anchor_right = 0.931
anchor_bottom = 0.229
margin_left = 0.320007
margin_top = 19.84
margin_right = -140.48
margin_bottom = -9.68002
rect_scale = Vector2( 2, 2 )
text = "SHOW"

[node name="RVLabel" type="Label" parent="."]
anchor_left = 0.347
anchor_top = 0.26
anchor_right = 0.653
anchor_bottom = 0.292
margin_left = 0.23999
margin_top = 0.799957
margin_right = -220.24
margin_bottom = -40.6401
rect_scale = Vector2( 3, 3 )
text = "Rewarded Video"
align = 1
valign = 1

[node name="RVCacheButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.302
anchor_right = 0.329
anchor_bottom = 0.333
margin_left = 0.479996
margin_top = 0.159973
margin_right = -140.32
margin_bottom = -29.36
rect_scale = Vector2( 2, 2 )
text = "CACHE"

[node name="RVCanShowButton" type="Button" parent="."]
anchor_left = 0.37
anchor_top = 0.302
anchor_right = 0.63
anchor_bottom = 0.333
margin_left = 0.399994
margin_top = 0.159973
margin_right = -140.4
margin_bottom = -29.36
rect_scale = Vector2( 2, 2 )
text = "CAN SHOW ?"

[node name="RVShowButton" type="Button" parent="."]
anchor_left = 0.671
anchor_top = 0.302
anchor_right = 0.931
anchor_bottom = 0.333
margin_left = 0.320007
margin_top = 0.159973
margin_right = -140.48
margin_bottom = -29.36
rect_scale = Vector2( 2, 2 )
text = "SHOW"

[node name="BannerLabel" type="Label" parent="."]
anchor_left = 0.347
anchor_top = 0.354
anchor_right = 0.653
anchor_bottom = 0.385
margin_left = 0.23999
margin_top = 0.320007
margin_right = -220.24
margin_bottom = -39.2
rect_scale = Vector2( 3, 3 )
text = "Banner"
align = 1
valign = 1

[node name="BannerShowLeftButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.396
anchor_right = 0.255
anchor_bottom = 0.427
margin_left = 0.479996
margin_top = -0.320068
margin_right = -100.4
margin_bottom = -29.84
rect_scale = Vector2( 2, 2 )
text = "SHOW LEFT"

[node name="BannerShowTopButton" type="Button" parent="."]
anchor_left = 0.296
anchor_top = 0.396
anchor_right = 0.481
anchor_bottom = 0.427
margin_left = 0.320007
margin_top = -0.320068
margin_right = -99.48
margin_bottom = -29.84
rect_scale = Vector2( 2, 2 )
text = "SHOW TOP"

[node name="BannerShowRightButton" type="Button" parent="."]
anchor_left = 0.519
anchor_top = 0.396
anchor_right = 0.704
anchor_bottom = 0.427
margin_left = -0.520081
margin_top = -0.320068
margin_right = -100.32
margin_bottom = -29.84
rect_scale = Vector2( 2, 2 )
text = "SHOW RIGHT"

[node name="BannerShowBottomButton" type="Button" parent="."]
anchor_left = 0.745
anchor_top = 0.396
anchor_right = 0.931
anchor_bottom = 0.427
margin_left = 0.399902
margin_top = -0.320068
margin_right = -100.48
margin_bottom = -29.84
rect_scale = Vector2( 2, 2 )
text = "SHOW BTM"

[node name="BannerHideButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.448
anchor_right = 0.255
anchor_bottom = 0.479
margin_left = 0.479996
margin_top = -0.160034
margin_right = -100.4
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "HIDE"

[node name="BannerDestroyButton" type="Button" parent="."]
anchor_left = 0.296
anchor_top = 0.448
anchor_right = 0.481
anchor_bottom = 0.479
margin_left = 0.320007
margin_top = -0.160034
margin_right = -99.48
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "DESTROY"

[node name="BannerShowCustomButton" type="Button" parent="."]
anchor_left = 0.519
anchor_top = 0.448
anchor_right = 0.704
anchor_bottom = 0.479
margin_left = -0.520081
margin_top = -0.160034
margin_right = -100.32
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "SHOW VIEW"

[node name="BannerHideCustomButton" type="Button" parent="."]
anchor_left = 0.745
anchor_top = 0.448
anchor_right = 0.931
anchor_bottom = 0.479
margin_left = 0.399902
margin_top = -0.160034
margin_right = -100.48
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "HIDE VIEW"

[node name="MrecLabel" type="Label" parent="."]
anchor_left = 0.347
anchor_top = 0.5
anchor_right = 0.653
anchor_bottom = 0.531
margin_left = 0.23999
margin_right = -220.24
margin_bottom = -39.52
rect_scale = Vector2( 3, 3 )
text = "Mrec"
align = 1
valign = 1

[node name="MrecShowButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.542
anchor_right = 0.329
anchor_bottom = 0.573
margin_left = 0.479996
margin_top = -0.640137
margin_right = -140.32
margin_bottom = -30.16
rect_scale = Vector2( 2, 2 )
text = "SHOW"

[node name="MrecHideButton" type="Button" parent="."]
anchor_left = 0.37
anchor_top = 0.542
anchor_right = 0.63
anchor_bottom = 0.573
margin_left = 0.399994
margin_top = -0.640137
margin_right = -140.4
margin_bottom = -30.16
rect_scale = Vector2( 2, 2 )
text = "HIDE"

[node name="MrecDestroyButton" type="Button" parent="."]
anchor_left = 0.671
anchor_top = 0.542
anchor_right = 0.931
anchor_bottom = 0.573
margin_left = 0.320007
margin_top = -0.640137
margin_right = -140.48
margin_bottom = -30.16
rect_scale = Vector2( 2, 2 )
text = "DESTROY"

[node name="MiscLabel" type="Label" parent="."]
anchor_left = 0.347
anchor_top = 0.781
anchor_right = 0.653
anchor_bottom = 0.812
margin_left = 0.23999
margin_top = 0.47998
margin_right = -220.24
margin_bottom = -39.04
rect_scale = Vector2( 3, 3 )
text = "Misc"
align = 1
valign = 1

[node name="LogEventButton" type="Button" parent="."]
anchor_left = 0.069
anchor_top = 0.823
anchor_right = 0.329
anchor_bottom = 0.854
margin_left = 0.479996
margin_top = -0.160034
margin_right = -140.32
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "LOG EVENT"

[node name="ValidateInAppButton" type="Button" parent="."]
anchor_left = 0.37
anchor_top = 0.823
anchor_right = 0.63
anchor_bottom = 0.854
margin_left = 0.399994
margin_top = -0.160034
margin_right = -140.4
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "VALIDATE INAPP"

[node name="TestActivityButton" type="Button" parent="."]
anchor_left = 0.671
anchor_top = 0.823
anchor_right = 0.931
anchor_bottom = 0.854
margin_left = 0.320007
margin_top = -0.160034
margin_right = -140.48
margin_bottom = -29.6801
rect_scale = Vector2( 2, 2 )
text = "TEST ACTIVITY"

[connection signal="ad_revenue_received" from="AppodealSignals" to="." method="_on_AppodealSignals_ad_revenue_received"]
[connection signal="banner_clicked" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_clicked"]
[connection signal="banner_expired" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_expired"]
[connection signal="banner_failed_to_load" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_failed_to_load"]
[connection signal="banner_loaded" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_loaded"]
[connection signal="banner_show_failed" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_show_failed"]
[connection signal="banner_shown" from="AppodealSignals" to="." method="_on_AppodealSignals_banner_shown"]
[connection signal="inapp_purchase_validation_failed" from="AppodealSignals" to="." method="_on_AppodealSignals_inapp_purchase_validation_failed"]
[connection signal="inapp_purchase_validation_succeded" from="AppodealSignals" to="." method="_on_AppodealSignals_inapp_purchase_validation_succeded"]
[connection signal="initialization_finished" from="AppodealSignals" to="." method="_on_AppodealSignals_initialization_finished"]
[connection signal="interstitial_clicked" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_clicked"]
[connection signal="interstitial_closed" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_closed"]
[connection signal="interstitial_expired" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_expired"]
[connection signal="interstitial_failed_to_load" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_failed_to_load"]
[connection signal="interstitial_loaded" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_loaded"]
[connection signal="interstitial_show_failed" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_show_failed"]
[connection signal="interstitial_shown" from="AppodealSignals" to="." method="_on_AppodealSignals_interstitial_shown"]
[connection signal="mrec_clicked" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_clicked"]
[connection signal="mrec_expired" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_expired"]
[connection signal="mrec_failed_to_load" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_failed_to_load"]
[connection signal="mrec_loaded" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_loaded"]
[connection signal="mrec_show_failed" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_show_failed"]
[connection signal="mrec_shown" from="AppodealSignals" to="." method="_on_AppodealSignals_mrec_shown"]
[connection signal="rewarded_video_clicked" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_clicked"]
[connection signal="rewarded_video_closed" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_closed"]
[connection signal="rewarded_video_expired" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_expired"]
[connection signal="rewarded_video_failed_to_load" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_failed_to_load"]
[connection signal="rewarded_video_finished" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_finished"]
[connection signal="rewarded_video_loaded" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_loaded"]
[connection signal="rewarded_video_show_failed" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_show_failed"]
[connection signal="rewarded_video_shown" from="AppodealSignals" to="." method="_on_AppodealSignals_rewarded_video_shown"]
[connection signal="pressed" from="InitButton" to="." method="_on_InitButton_pressed"]
[connection signal="pressed" from="IsInitializedButton" to="." method="_on_IsInitializedButton_pressed"]
[connection signal="pressed" from="InterCacheButton" to="." method="_on_InterCacheButton_pressed"]
[connection signal="pressed" from="InterCanShowButton" to="." method="_on_InterCanShowButton_pressed"]
[connection signal="pressed" from="InterShowButton" to="." method="_on_InterShowButton_pressed"]
[connection signal="pressed" from="RVCacheButton" to="." method="_on_RVCacheButton_pressed"]
[connection signal="pressed" from="RVCanShowButton" to="." method="_on_RVCanShowButton_pressed"]
[connection signal="pressed" from="RVShowButton" to="." method="_on_RVShowButton_pressed"]
[connection signal="pressed" from="BannerShowLeftButton" to="." method="_on_BannerShowLeftButton_pressed"]
[connection signal="pressed" from="BannerShowTopButton" to="." method="_on_BannerShowTopButton_pressed"]
[connection signal="pressed" from="BannerShowRightButton" to="." method="_on_BannerShowRightButton_pressed"]
[connection signal="pressed" from="BannerShowBottomButton" to="." method="_on_BannerShowBottomButton_pressed"]
[connection signal="pressed" from="BannerHideButton" to="." method="_on_BannerHideButton_pressed"]
[connection signal="pressed" from="BannerDestroyButton" to="." method="_on_BannerDestroyButton_pressed"]
[connection signal="pressed" from="BannerShowCustomButton" to="." method="_on_BannerShowCustomButton_pressed"]
[connection signal="pressed" from="BannerHideCustomButton" to="." method="_on_BannerHideCustomButton_pressed"]
[connection signal="pressed" from="MrecShowButton" to="." method="_on_MrecShowButton_pressed"]
[connection signal="pressed" from="MrecHideButton" to="." method="_on_MrecHideButton_pressed"]
[connection signal="pressed" from="MrecDestroyButton" to="." method="_on_MrecDestroyButton_pressed"]
[connection signal="pressed" from="LogEventButton" to="." method="_on_LogEventButton_pressed"]
[connection signal="pressed" from="ValidateInAppButton" to="." method="_on_ValidateInAppButton_pressed"]
[connection signal="pressed" from="TestActivityButton" to="." method="_on_TestActivityButton_pressed"]
